--- a/terms.html
+++ b/terms.html
@@ -14,8 +14,8 @@
   <body>
     <strong>Privacy Policy</strong>
     <p>
-      kyberzek built the problemsolver app as a Free app. This SERVICE is
-      provided by kyberzek at no cost and is intended for use as is.
+      malishok built the money kids app as a Free app. This SERVICE is
+      provided by malishok at no cost and is intended for use as is.
     </p>
     <p>
       This page is used to inform visitors regarding my policies with the
@@ -31,7 +31,7 @@
     </p>
     <p>
       The terms used in this Privacy Policy have the same meanings as in our
-      Terms and Conditions, which are accessible at problemsolver unless
+      Terms and Conditions, which are accessible at money kids unless
       otherwise defined in this Privacy Policy.
     </p>
     <p><strong>Information Collection and Use</strong></p>
@@ -167,24 +167,24 @@
       extract the source code of the app, and you also shouldn’t try to
       translate the app into other languages or make derivative versions. The
       app itself, and all the trademarks, copyright, database rights, and other
-      intellectual property rights related to it, still belong to kyberzek.
+      intellectual property rights related to it, still belong to malishok.
     </p>
     <p>
-      kyberzek is committed to ensuring that the app is as useful and efficient
+      malishok is committed to ensuring that the app is as useful and efficient
       as possible. For that reason, we reserve the right to make changes to the
       app or to charge for its services, at any time and for any reason. We will
       never charge you for the app or its services without making it very clear
       to you exactly what you’re paying for.
     </p>
     <p>
-      The problemsolver app stores and processes personal data that you have
+      The money kids app stores and processes personal data that you have
       provided to us, to provide my Service. It’s your responsibility to keep
       your phone and access to the app secure. We therefore recommend that you
       do not jailbreak or root your phone, which is the process of removing
       software restrictions and limitations imposed by the official operating
       system of your device. It could make your phone vulnerable to
       malware/viruses/malicious programs, compromise your phone’s security
-      features and it could mean that the problemsolver app won’t work properly
+      features and it could mean that the money kids app won’t work properly
       or at all.
     </p>
     <div>
@@ -208,10 +208,10 @@
       </ul>
     </div>
     <p>
-      You should be aware that there are certain things that kyberzek will not
+      You should be aware that there are certain things that malishok will not
       take responsibility for. Certain functions of the app will require the app
       to have an active internet connection. The connection can be Wi-Fi or
-      provided by your mobile network provider, but kyberzek cannot take
+      provided by your mobile network provider, but malishok cannot take
       responsibility for the app not working at full functionality if you don’t
       have access to Wi-Fi, and you don’t have any of your data allowance left.
     </p>
@@ -229,17 +229,17 @@
       you have received permission from the bill payer for using the app.
     </p>
     <p>
-      Along the same lines, kyberzek cannot always take responsibility for the
+      Along the same lines, malishok cannot always take responsibility for the
       way you use the app i.e. You need to make sure that your device stays
       charged – if it runs out of battery and you can’t turn it on to avail the
-      Service, kyberzek cannot accept responsibility.
+      Service, malishok cannot accept responsibility.
     </p>
     <p>
-      With respect to kyberzek’s responsibility for your use of the app, when
+      With respect to malishok’s responsibility for your use of the app, when
       you’re using the app, it’s important to bear in mind that although we
       endeavor to ensure that it is updated and correct at all times, we do rely
       on third parties to provide information to us so that we can make it
-      available to you. kyberzek accepts no liability for any loss, direct or
+      available to you. malishok accepts no liability for any loss, direct or
       indirect, you experience as a result of relying wholly on this
       functionality of the app.
     </p>
@@ -248,7 +248,7 @@
       available on Android – the requirements for the system(and for any
       additional systems we decide to extend the availability of the app to) may
       change, and you’ll need to download the updates if you want to keep using
-      the app. kyberzek does not promise that it will always update the app so
+      the app. malishok does not promise that it will always update the app so
       that it is relevant to you and/or works with the Android version that you
       have installed on your device. However, you promise to always accept
       updates to the application when offered to you, We may also wish to stop
